# raytracer

./: .gitignore  Cargo.toml  README.md  cspell.json
examples/: blocks_ball.json5  blue_ball.json5  cornell.json5  gen_blocks.py  globe.json5  knight.json5  two_spheres.json5
src/: camera.rs  config.rs  hitting.rs  main.rs  materials.rs  math.rs  objects.rs  part_file.rs  progress.rs  textures.rs  transforms.rs  vec3.rs
