[package]
name = "raytracer"
version = "0.1.0"
authors = ["Felipe Bemfica <felipe@bemfica.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.37"
image = "0.23.12"
rand = "0.8.0"
rayon = "1.5.0"
structopt = "0.3.21"
